# cuda_playground

./: README.md
matmul_optimization/: CMakeLists.txt  cuBLAS_sgemm.cu  environment.yml  sgemm.cu
matmul_optimization/benchmark_results/: kernel_10_autotune_results.csv  kernel_11_autotune_results.csv  kernel_9_autotune_results.csv
matmul_optimization/scripts/: kernel_10_autotuner.sh  kernel_11_autotuner.sh  kernel_9_autotuner.sh
matmul_optimization/src/: driver.cu  driver.cuh  kernels.cuh
matmul_optimization/src/kernels/: sgemm_v02.cuh  sgemm_v03.cuh  sgemm_v04.cuh  sgemm_v05.cuh  sgemm_v06.cuh  sgemm_v07.cuh  sgemm_v08.cuh  sgemm_v09.cuh  sgemm_v10.cuh  sgemm_v11.cuh  sgemm_v12.cuh
matrix_ops/: README.md
matrix_ops/src/kernels/: invert_matrix.cu
playground/: main.cu  matmul.cuh
playground/matmul_optimization/: CMakeLists.txt  Makefile  cuBLAS_sgemm.cu  driver.cu  plot_benchmark_results.py  sgemm.cu  simplest_kernel.cu
playground/matmul_optimization/kernels/: sgemm_v01.cuh  sgemm_v03.cuh  sgemm_v04.cuh  sgemm_v05.cuh  sgemm_v07.cuh  sgemm_v10.cuh
playground/matmul_optimization/scripts/: kernel_10_autotuner.sh  kernel_9_autotuner.sh
playground/matmul_optimization/src/: driver.cu  kernels.cuh
playground/matmul_optimization/src/kernels/: sgemm_v01.cuh  sgemm_v02.cuh  sgemm_v03.cuh  sgemm_v04.cuh  sgemm_v05.cuh  sgemm_v06.cuh  sgemm_v07.cuh  sgemm_v08.cuh  sgemm_v09.cuh  sgemm_v11.cuh  sgemm_v12.cuh
